# gt06_server

./: .codeclimate.yml  .gitignore  .reek  .rubocop.yml  .travis.yml  Capfile.rb  Gemfile  LICENSE  Note.md  README.md  Rakefile  docker-compose.yml  gt06_server.gemspec  ping.rb  run.rb
config/: deploy.rb
config/deploy/: production.rb  staging.rb
lib/: gt06_server.rb  libcrc16.rb
lib/ext/: CMakeLists.txt  crc_16.cpp
lib/gt06_server/: crc.rb  packet.rb  packs.rb  protocol.rb  server.rb  session.rb  session_killer.rb  session_sweeper.rb  version.rb
lib/gt06_server/messages/: alarm_packet.rb  date_time_information.rb  gps_information.rb  gps_query_address.rb  lbs_information.rb  location_data.rb  login_message.rb  status_information.rb
test/: command_test.rb  gp06_server_test.rb  packet_test.rb  protocol_test.rb  session_killer_test.rb  session_sweeper_test.rb  session_test.rb  test_helper.rb
